added marker layer

--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "[563 rows x 10 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,13 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db849fade56e431ba905b9d61b64d8d9",
+       "model_id": "fb2c406e004e4981afd6e7f82976c67b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "548        83  40.22  116.22     77.00        2.24  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,19 +686,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sakis\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\sakis\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
+      "  \n"
      ]
     },
     {
@@ -722,10 +722,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>city_name</th>\n",
-       "      <th>country</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
        "      <th>Hotel Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -879,7 +879,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                   city_name country    lat     lon Hotel Name\n",
+       "                        City Country    Lat     Lng Hotel Name\n",
        "29                    Tūkrah      LY  32.53   20.58           \n",
        "47   Rodolfo Sánchez Taboada      MX  31.72 -116.57           \n",
        "134                    Iğdır      TR  39.92   44.05           \n",
@@ -900,22 +900,26 @@
        "548                Changping      CN  40.22  116.22           "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " new_weather[\"Hotel Name\"] =\"\"\n",
-    " #new_weather.head()\n",
+    "# Add a new colum \"Hotel Name\"\n",
+    "new_weather[\"Hotel Name\"] =\"\"\n",
     "\n",
-    "hotel_df = new_weather.loc[:,[\"city_name\", \"country\", \"lat\", \"lon\",\"Hotel Name\"]]\n",
+    "# Rename other columns \n",
+    "remamed = new_weather.rename(columns={\"city_name\": \"City\", \"country\": \"Country\", \"lat\": \"Lat\", \"lon\": \"Lng\"})\n",
+    "\n",
+    "# Create a new df called hotel_df\n",
+    "hotel_df = remamed.loc[:,[\"City\", \"Country\", \"Lat\", \"Lng\",\"Hotel Name\"]]\n",
     "hotel_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -936,16 +940,16 @@
     "    \"key\": g_key\n",
     "}\n",
     "\n",
-    "# Use the lat/lng we recovered to identify airports\n",
-    "for index, row in new_weather.iterrows():\n",
+    "# Use the lat/lng we recovered to identify hotel\n",
+    "for index, row in hotel_df.iterrows():\n",
     "    # get lat, lng from df\n",
-    "    lat = row[\"lat\"]\n",
-    "    lng = row[\"lon\"]\n",
+    "    lat = row[\"Lat\"]\n",
+    "    lng = row[\"Lng\"]\n",
     "\n",
     "    # change location each iteration while leaving original params in place\n",
     "    params[\"location\"] = f\"{lat},{lng}\"\n",
     "\n",
-    "    # Use the search term: \"International Airport\" and our lat/lng\n",
+    "    # Use the search term: \"lodging\" and our lat/lng\n",
     "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
     "\n",
     "    # make request and print url\n",
@@ -966,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -990,10 +994,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>city_name</th>\n",
-       "      <th>country</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
        "      <th>Hotel Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1028,7 +1032,7 @@
        "      <td>LY</td>\n",
        "      <td>29.11</td>\n",
        "      <td>21.29</td>\n",
-       "      <td>Awjilah</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>203</th>\n",
@@ -1052,7 +1056,7 @@
        "      <td>MA</td>\n",
        "      <td>29.58</td>\n",
        "      <td>-9.50</td>\n",
-       "      <td>Ouijjane</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>362</th>\n",
@@ -1060,7 +1064,7 @@
        "      <td>BR</td>\n",
        "      <td>-4.33</td>\n",
        "      <td>-45.17</td>\n",
-       "      <td>São José dos Curicas</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>392</th>\n",
@@ -1147,7 +1151,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                   city_name country    lat     lon  \\\n",
+       "                        City Country    Lat     Lng  \\\n",
        "29                    Tūkrah      LY  32.53   20.58   \n",
        "47   Rodolfo Sánchez Taboada      MX  31.72 -116.57   \n",
        "134                    Iğdır      TR  39.92   44.05   \n",
@@ -1171,11 +1175,11 @@
        "29                     استراحة لاقروتا  \n",
        "47                    Casa De Thompson  \n",
        "134  Igdir Central Hotel Emperor Hotel  \n",
-       "156                            Awjilah  \n",
+       "156                                     \n",
        "203             Pousada dos Navegantes  \n",
        "310                       Hotel Zaraza  \n",
-       "325                           Ouijjane  \n",
-       "362               São José dos Curicas  \n",
+       "325                                     \n",
+       "362                                     \n",
        "392      شرکت معماری مهراز شایگان آراد  \n",
        "417                    Hotel Sirenetta  \n",
        "466                Hotel Fontana Plaza  \n",
@@ -1188,7 +1192,7 @@
        "548                     Huachang Hotel  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,14 +1225,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb2c406e004e4981afd6e7f82976c67b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
+    "markers = gmaps.marker_layer(locations, info_box_content = hotel_info)\n",
     "\n",
-    "\n",
-    "# Display figure\n"
+    "# Display figure\n",
+    "fig.add_layer(markers)\n",
+    "fig"
    ]
   },
   {
