--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "[563 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,13 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72f175e2c33c4ca4a18feaf114e5fcc8",
+       "model_id": "9fc2dcfa3e264c9e8e59f1fb95e282c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "520        72  36.69   53.55     70.38        3.04  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "520                 Behshahr      IR  36.69   53.55           "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,16 +697,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Tūkrah</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>32.53</td>\n",
+       "      <td>20.58</td>\n",
+       "      <td>استراحة لاقروتا</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Rodolfo Sánchez Taboada</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>31.72</td>\n",
+       "      <td>-116.57</td>\n",
+       "      <td>Casa De Thompson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>Iğdır</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>39.92</td>\n",
+       "      <td>44.05</td>\n",
+       "      <td>Igdir Central Hotel Emperor Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>Caravelas</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-17.71</td>\n",
+       "      <td>-39.25</td>\n",
+       "      <td>Pousada dos Navegantes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>Barra do Garças</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-15.89</td>\n",
+       "      <td>-52.26</td>\n",
+       "      <td>Hotel Pousada Tropical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>Marchena</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>37.33</td>\n",
+       "      <td>-5.42</td>\n",
+       "      <td>Molino La Boticaria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>Behshahr</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>36.69</td>\n",
+       "      <td>53.55</td>\n",
+       "      <td>Abbas Abad Hotel &amp; Restaurant</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        City Country    Lat     Lng  \\\n",
+       "29                    Tūkrah      LY  32.53   20.58   \n",
+       "47   Rodolfo Sánchez Taboada      MX  31.72 -116.57   \n",
+       "134                    Iğdır      TR  39.92   44.05   \n",
+       "203                Caravelas      BR -17.71  -39.25   \n",
+       "482          Barra do Garças      BR -15.89  -52.26   \n",
+       "510                 Marchena      ES  37.33   -5.42   \n",
+       "520                 Behshahr      IR  36.69   53.55   \n",
+       "\n",
+       "                            Hotel Name  \n",
+       "29                     استراحة لاقروتا  \n",
+       "47                    Casa De Thompson  \n",
+       "134  Igdir Central Hotel Emperor Hotel  \n",
+       "203             Pousada dos Navegantes  \n",
+       "482             Hotel Pousada Tropical  \n",
+       "510                Molino La Boticaria  \n",
+       "520      Abbas Abad Hotel & Restaurant  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hotel_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,9 +842,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9fc2dcfa3e264c9e8e59f1fb95e282c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
     "markers = gmaps.marker_layer(locations, info_box_content = hotel_info)\n",
@@ -739,13 +868,6 @@
     "fig.add_layer(markers)\n",
     "fig"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
