--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -38,7 +38,7 @@
     "import json\n",
     "\n",
     "# Import API key\n",
-    "g_key = \"AIzaSyAyoYOK3elADQJyScjYk7u2ukQCOVeg4HU\"\n",
+    "g_key = \n",
     "\n",
     "# Configure gmaps\n",
     "gmaps.configure(api_key=g_key)"
@@ -909,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
