--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -28,7 +28,7 @@
     "from scipy.stats import linregress\n",
     "\n",
     "# Import API key\n",
-    "weather_api_key = \"b66506d86c28e3321e7e88b49d4983d5\"\n",
+    "weather_api_key = \n",
     "\n",
     "# Incorporated citipy to determine city based on latitude and longitude\n",
     "from citipy import citipy\n",
@@ -1844,7 +1844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
